--- a/TemplatedControlSample/TemplatedControlSample/DateTimeSelectors/DateTimeSelector4.xaml
+++ b/TemplatedControlSample/TemplatedControlSample/DateTimeSelectors/DateTimeSelector4.xaml
@@ -1,14 +1,13 @@
-﻿<local:DateTimeSelectorBase
-    x:Class="TemplatedControlSample.DateTimeSelector4"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:TemplatedControlSample"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
+﻿<local:DateTimeSelectorBase x:Class="TemplatedControlSample.DateTimeSelector4"
+                            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                            xmlns:local="using:TemplatedControlSample"
+                            xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                            xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                            mc:Ignorable="d"
                             x:Name="DateTimeSelector"
-    d:DesignHeight="300"
-    d:DesignWidth="400">
+                            d:DesignHeight="300"
+                            d:DesignWidth="400">
     <local:DateTimeSelectorBase.Resources>
         <local:DateTimeOffsetConverter x:Key="DateTimeOffsetConverter" />
         <local:TimeSpanConverter x:Key="TimeSpanConverter" />
