--- a/PathDemo/PathDemoUWwp/PerformanceCanvas1Page.xaml
+++ b/PathDemo/PathDemoUWwp/PerformanceCanvas1Page.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="PathDemoUWwp.MainPage"
+    x:Class="PathDemoUWwp.PerformanceCanvas1Page"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:PathDemoUWwp"
@@ -8,8 +8,6 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Canvas>
-            <Polyline x:Name="Polyline" Stroke="BlueViolet" StrokeThickness="1"/>
-        </Canvas>
+
     </Grid>
 </Page>
