--- a/PathDemo/PathDemoSilverlight/ProgressRingPage.xaml
+++ b/PathDemo/PathDemoSilverlight/ProgressRingPage.xaml
@@ -6,12 +6,49 @@
              mc:Ignorable="d"
              d:DesignHeight="300"
              d:DesignWidth="400">
+    <UserControl.Resources>
+        <Storyboard x:Name="Storyboard1">
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(Shape.StrokeDashOffset)"
+                                           Storyboard.TargetName="ellipse">
+                <EasingDoubleKeyFrame KeyTime="0:0:0.0"
+                                      Value="0" />
+                <EasingDoubleKeyFrame KeyTime="0:0:5"
+                                      Value="-1000" />
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateX)"
+                                           Storyboard.TargetName="ellipse">
+                <EasingDoubleKeyFrame KeyTime="0"
+                                      Value="0" />
+                <EasingDoubleKeyFrame KeyTime="0:0:4.4"
+                                      Value="8" />
+                <EasingDoubleKeyFrame KeyTime="0:0:5"
+                                      Value="0" />
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)"
+                                           Storyboard.TargetName="ellipse">
+                <EasingDoubleKeyFrame KeyTime="0"
+                                      Value="0" />
+                <EasingDoubleKeyFrame KeyTime="0:0:4.4"
+                                      Value="9.334" />
+                <EasingDoubleKeyFrame KeyTime="0:0:5"
+                                      Value="0" />
+            </DoubleAnimationUsingKeyFrames>
+        </Storyboard>
+    </UserControl.Resources>
 
     <Grid x:Name="LayoutRoot"
           Background="White">
-        <Ellipse Stroke="Purple"
+        <Ellipse x:Name="ellipse"
+                 Stroke="Purple"
                  StrokeThickness="2"
                  Height="200"
-                 Width="200" />
+                 Width="200"
+                 StrokeDashOffset="33"
+                 StrokeDashArray="157.08 157.08"
+                 RenderTransformOrigin="0.5,0.5">
+            <Ellipse.RenderTransform>
+                <CompositeTransform />
+            </Ellipse.RenderTransform>
+        </Ellipse>
     </Grid>
 </UserControl>
